# SmartServer

./: .gitignore  CMakeLists.txt  README.md
inc/: AppComunicator.h  Condition.h  DoorSensor.h  DoorServer.h  Light.h  LightServer.h  Logger.h  MVMSensor.h  Modul.h  Mutex.h  MySQL.h  SecurityManager.h  SecurityServer.h  ServerExceptions.h  Socket.h  Thread.h  TmpSenzor.h  TmpServer.h  globalData.h
include/: AppComunicator.h  Condition.h  Definitions.h  DoorSensor.h  GlobalData.h  Light.h  LightServer.h  Modul.h  MySQL.h  Socket.h  Thread.h  TmpSenzor.h  TmpServer.h
lbr_c++/: definitions.h
src/: AppComunicator.cpp  DoorSensor.cpp  DoorServer.cpp  Light.cpp  LightServer.cpp  MVMSensor.cpp  MySQL.cpp  SecurityManager.cpp  SecurityServer.cpp  Socket.cpp  TmpSenzor.cpp  TmpServer.cpp  main.cpp
